Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.401**** devel

***	Fix recognizing type parameters as classes, bug627. [Jon Nall]


* Verilog::Language 3.400 2013-02-27

***	Support SystemVerilog 1800-2012.

****	Predefine SV_COV_START and other IEEE mandated predefines.


* Verilog::Language 3.318 2012-11-28

****	Fix vpassert test failure in bleadperl 5.17.5-518, bug582.  [Andreas Koenig]


* Verilog::Language 3.317 2012-10-01

***	Gunzip Verilog::Preproc filenames ending in .gz, bug564. [Jingzhen Hu]

****	Fix multidimensional unpacked wires. [Leif Tore Rusten]

****	Fix MacOS 10.8 build error. [Oliver King-Smith]


* Verilog::Language 3.316 2012-07-27

****	Fix newlines in radix values, bug507. [Walter Lavino]

****	Fix internal readWholefile error check, bug518. [Wei Song]

****	Fix parsing hierarchical binds.  [Brian Mokrzycki]


* Verilog::Language 3.315 2012-05-04

***	Put root localparams into $root module, bug471. [Corey Teffetalor]

****	Fix comment callback starting line, bug459. [Max Bjurling]

****	Fix genvar and begin under generate, bug461.  [Alex Solomatnikov]

****	Fix const class member parsing.

****	Fix compile error on MS Windows.  [Ling Li Wang]

****	Fix cpan-testers' tests on systems without perldoc.


* Verilog::Language 3.314 2012-02-27

***	Add vhier --forest and --instance.  [by John Busco]

***	Fix expansion of back-slashed escaped macros, bug441.  [Alberto Del Rio]

***	Fix -F relative filename parsing, bug444. [Jeremy Bennett]

****	Fix c style var array declarations. [by Jack Cummings]

****	Fix --debug parsing after -f files, bug442. [Jeremy Bennett]

****	Fix hang on recursive substitution `defines, bug443. [Alex Solomatnikov]


* Verilog::Language 3.313 2011-12-14

***	Add Verilog-AMS keywords to Verilog::Language.
