@@ -14,3 +14,4 @@ simv
 signals.vrename
 test_dir
 MYMETA.*
+nodist
