@@ -498,7 +498,12 @@ verilog/parser_bugs.v:482: MODULE  'module' 'non_bug586' undef '0'
 verilog/parser_bugs.v:482: COMMENT  '// Verilator only'
 verilog/parser_bugs.v:483: VAR  'port' 'bvar' 'module' '' 'logic [bug586_pkg::B:0]' '' ''
 verilog/parser_bugs.v:483: PORT  'bvar' 'module' 'input' 'logic [bug586_pkg::B:0]' '' '0'
+verilog/parser_bugs.v:486: COMMENT  '// bug_641'
 verilog/parser_bugs.v:484: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:487: FUNCTION  'function' 'mydpi_bug641' 'bit'
+verilog/parser_bugs.v:487: VAR  'port' 'a_dpi_input' 'function' '' '' '' ''
+verilog/parser_bugs.v:487: PORT  'a_dpi_input' 'function' 'input' '' '' '1'
+verilog/parser_bugs.v:487: ENDTASKFUNC  'endfunction'
 verilog/pinorder.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
 verilog/pinorder.v:002: COMMENT  '//'
 verilog/pinorder.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
@@ -707,6 +712,7 @@ verilog/parser_sv.v:125: VAR  'typedef' 'triple' 'task' '' 'int' '[1:3]' ''
 verilog/parser_sv.v:127: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:129: CLASS  'class' 'VclassWCopy' 'virtual'
 verilog/parser_sv.v:130: FUNCTION  'function' 'new' ''
+verilog/parser_sv.v:130: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:131: FUNCTION  'function' 'copy' 'VclassWCopy'
 verilog/parser_sv.v:131: VAR  'port' 'src' 'function' '' 'VclassWCopy' '' 'null'
 verilog/parser_sv.v:131: PORT  'src' 'function' 'input' 'VclassWCopy' '' '1'
@@ -728,6 +734,7 @@ verilog/parser_sv.v:149: COMMENT  '// It's *not* legal according to the grammar 
 verilog/parser_sv.v:151: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:153: CLASS  'class' 'PreTypedefedClass' ''
 verilog/parser_sv.v:155: FUNCTION  'function' 'new' ''
+verilog/parser_sv.v:155: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:156: ENDCLASS  'endclass'
 verilog/parser_sv.v:157: CLASS  'class' 'NewInNew' ''
 verilog/parser_sv.v:160: FUNCTION  'function' 'new' ''
@@ -771,9 +778,12 @@ verilog/parser_sv.v:202: CLASS  'class' 'vmm_stuff' ''
 verilog/parser_sv.v:216: TASK  'task' 'examples'
 verilog/parser_sv.v:220: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:221: FUNCTION  'function' 'foo1' 'bit'
+verilog/parser_sv.v:221: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:222: FUNCTION  'function' 'foo2' 'void'
+verilog/parser_sv.v:222: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:223: VAR  'var' 'foo3' 'class' '' 'protected static string' '' ''
 verilog/parser_sv.v:224: FUNCTION  'function' 'foo4' 'bit'
+verilog/parser_sv.v:224: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:225: VAR  'var' 'foo5' 'class' '' 'static local bit' '[string]' ''
 verilog/parser_sv.v:226: ENDCLASS  'endclass'
 verilog/parser_sv.v:202: CLASS  'class' 'vmm_cl_func_colon' ''
@@ -783,11 +793,13 @@ verilog/parser_sv.v:230: VAR  'port' 'kind' 'function' '' 'vmm_cl_func_colon::re
 verilog/parser_sv.v:230: PORT  'kind' 'function' 'input' 'vmm_cl_func_colon::restart_e' '' '1'
 verilog/parser_sv.v:231: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:232: FUNCTION  'function' 'uses_class_type' 'int'
+verilog/parser_sv.v:232: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:233: ENDCLASS  'endclass'
 verilog/parser_sv.v:202: CLASS  'class' 'vmm_cl_subenv' ''
 verilog/parser_sv.v:236: TASK  'task' 'do_reset'
 verilog/parser_sv.v:236: VAR  'port' 'kind' 'task' '' 'vmm_cl_func_colon::restart_e' '' 'vmm_cl_func_colon::FIRM'
 verilog/parser_sv.v:236: PORT  'kind' 'task' 'input' 'vmm_cl_func_colon::restart_e' '' '1'
+verilog/parser_sv.v:236: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:237: ENDCLASS  'endclass'
 verilog/parser_sv.v:239: TASK  'task' 'empty_comma'
 verilog/parser_sv.v:244: ENDTASKFUNC  'endtask'
@@ -833,11 +845,15 @@ verilog/parser_sv.v:286: VAR  'member' 'val' 'union' '' 'logic' '' ''
 verilog/parser_sv.v:286: VAR  'typedef' 't_bug202_union' 'netlist' '' 'union' '' ''
 verilog/parser_sv.v:286: CLASS  'class' 'ln288' ''
 verilog/parser_sv.v:289: FUNCTION  'function' 'extvirtstr' 'string'
+verilog/parser_sv.v:289: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:290: TASK  'task' 'extvirttask'
+verilog/parser_sv.v:290: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:291: ENDCLASS  'endclass'
 verilog/parser_sv.v:286: CLASS  'class' 'cl_to_init' ''
 verilog/parser_sv.v:294: FUNCTION  'function' 'new' ''
+verilog/parser_sv.v:294: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:295: FUNCTION  'function' 'init' 'cl_to_init'
+verilog/parser_sv.v:295: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:296: ENDCLASS  'endclass'
 verilog/parser_sv.v:297: FUNCTION  'function' 'cl_to_init::init' 'cl_to_init'
 verilog/parser_sv.v:298: ENDTASKFUNC  'endfunction'
